# hindi-student-teacher

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
outputs/: generated_text.txt
src/: not_needed_step5_distillation_training_loop.py  not_needed_step6_autoregressive_generation.py  report.md  step1_dataset_statistics.py  step1_remove_empty_files.py  step2_tokenize_dataset_chunked.py  step2_train_tokenizer.py  step3_define_embeddings.py  step3_inspect_embeddings.py  step4_define_distillation_loss-updated.py  step4_define_distillation_loss.py  step5_hindi_student_training.py  step6_autoregressive_generation_hindi.py  step7_before_after_comparison.py  step7_prepare_untrained_model.py  step8_entropy_measurement.py  step8_repetition_rate.py  step8_token_diversity.py
student_hindi_model/: config.json
student_hindi_untrained/: config.json  generation_config.json
tokenizers/: hindi_bpe.model  hindi_bpe.vocab
